???? 0.8.8

    user visible changes, client:
    * Fixed a problem where files created when instl runs under sudo,
        could not be re-written under regular user.

    programmer visible changes:
    * os.umask(0) is called first thing.
    * batch file creation does chmod(777)

26/2/2014 0.8.7 Shai Shasag <shai@waves.com>

    user visible changes, client:
    * When using --run and script fails, exit code is passed correctly.
    * Proper downloading for all possible required items when target_os != current_os (offline sync).
    * Fixed: When running compiled instl in interactive mode exception was raised when instlClient and instlAdmin
        defined the same const values.
    * Better message if checking signature of a downloaded file fails.

    programmer visible changes:
    * init_download_tool method added to platformHelper so that the dl_tool can be initialized after the yaml files were read.
    * New defaults in main.yaml: Win_ALL_OS_NAMES, Mac_ALL_OS_NAMES.
    * Correct list of target OS names is produced in case TARGET_OS != CURRENT_OS.
    * Calling add_const_config_variable twice will not raise exception if the new and previous values are identical.

24/2/2014 0.8.6 Shai Shasag <shai@waves.com>

    user visible changes, client:
    * ACCEPTABLE_YAML_DOC_TAGS from main.yaml was missing from th ecompiled version.
    * version command will add "(not compiled)" if instl is running though python interpreter.
    * New var: __INSTL_COMPILED__ set to True is instl was compiled and False is running though python interpreter.

    user visible changes, admin:
    * fix props:    write svn info to file for debugging and reference. But go one folder up so not to be in the svn repo.

    programmer visible changes:
    * augmentedYaml when running as __main__ can open urls.
    * platformHelper's copy tool is now initialized early so it can be used by InstlInstanceBase.
    * check_prerequisite_var_existence put to good use.